<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('payments', function (Blueprint $table) {
            $table->id();
            $table->decimal('amount', 8, 2);
            $table->text('commentaire')->nullable();
            $table->foreignId('from_user_id')->references('id')->on('users')->onDelete('cascade');
            $table->foreignId('to_user_id')->references('id')->on('users')->onDelete('cascade');
            $table->foreignId('colocation_id')->references('id')->on('colocations')->onDelete('cascade');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('payments');
    }
};
